--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
 lxml==4.6.3
+python-dotenv==0.17.1
 requests==2.25.1
 selenium==3.141.0
 soupsieve==2.2.1
