--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,37 @@
-beautifulsoup4==4.9.3
+argcomplete==1.10.0
+beautifulsoup4==4.8.0
 bs4==0.0.1
 certifi==2020.12.5
-chardet==4.0.0
+chardet==3.0.4
+cycler==0.10.0
+docx2txt==0.8
+EbookLib==0.17.1
+extract-msg==0.23.1
 idna==2.10
+IMAPClient==2.1.0
+kiwisolver==1.3.1
 lxml==4.6.3
+matplotlib==3.4.2
+numpy==1.20.3
+olefile==0.46
+pdfminer.six==20181108
+Pillow==8.2.0
+pycryptodome==3.10.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python-dotenv==0.17.1
+python-pptx==0.6.18
+pytz==2021.1
 requests==2.25.1
 selenium==3.141.0
+six==1.12.0
+sortedcontainers==2.4.0
 soupsieve==2.2.1
+SpeechRecognition==3.8.1
+textract==1.6.3
+tika==1.24
+tzlocal==1.5.1
 urllib3==1.26.4
+wordcloud==1.8.1
+xlrd==1.2.0
+XlsxWriter==1.4.3
