--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,22 @@ bs4==0.0.1
 certifi==2020.12.5
 chardet==3.0.4
 cycler==0.10.0
+deprecation==2.1.0
 docx2txt==0.8
 EbookLib==0.17.1
 extract-msg==0.23.1
-fpdf==1.7.2
 idna==2.10
 IMAPClient==2.1.0
+img2pdf==0.4.4
 kiwisolver==1.3.1
-lxml==4.6.3
+lxml==4.9.1
 matplotlib==3.4.2
 numpy==1.20.3
 olefile==0.46
+packaging==21.3
 pdfminer.six==20181108
-Pillow==8.2.0
+pikepdf==6.2.0
+Pillow==9.2.0
 pycryptodome==3.10.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
