--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,16 +25,16 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
   && apt-get -y install --no-install-recommends unzip openjdk-11-jdk python-dev libxml2-dev libxslt1-dev antiword unrtf poppler-utils tesseract-ocr flac ffmpeg lame libmad0 libsox-fmt-mp3 sox libjpeg-dev swig libpulse-dev tesseract-ocr-por
 
 # Adding trusting keys to apt for repositories
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+# RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 # Adding Google Chrome to the repositories
-RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+#RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
 # Updating apt to see and install Google Chrome
-RUN apt-get -y update
+#RUN apt-get -y update
 # Magic happens
-RUN apt-get install -y google-chrome-stable
+#RUN apt-get install -y google-chrome-stable
 
-RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+#RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
 
-RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
+#RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 
 ENV DISPLAY=:99
