--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,28 @@
-argcomplete==1.10.0
-beautifulsoup4==4.8.0
-bs4==0.0.1
-certifi==2020.12.5
-cffi==1.15.1
+argcomplete==1.10.3
+beautifulsoup4==4.8.2
 chardet==3.0.4
-charset-normalizer==3.0.0
-click==8.1.3
 commonmark==0.9.1
-cryptography==38.0.3
-cycler==0.10.0
-deprecation==2.1.0
+compressed-rtf==1.0.6
 docx2txt==0.8
-EbookLib==0.17.1
-extract-msg==0.23.1
-glob2==0.7
-idna==2.10
+ebcdic==1.1.1
+extract-msg==0.28.7
 IMAPClient==2.1.0
-img2pdf==0.4.4
-joblib==1.2.0
-kiwisolver==1.3.1
 lxml==4.9.1
-matplotlib==3.4.2
 olefile==0.46
-packaging==21.3
-pdfminer.six==20181108
-pikepdf==6.2.0
-Pillow==9.2.0
-pycparser==2.21
-pycryptodome==3.10.1
+pdfminer.six==20191110
+Pillow==9.3.0
+pycryptodome==3.15.0
 Pygments==2.13.0
-pyparsing==2.4.7
 PyPDF2==2.11.1
-python-dateutil==2.8.1
-python-dotenv==0.17.1
-python-pptx==0.6.18
-pytz==2021.1
-regex==2022.10.31
-requests==2.25.1
+python-pptx==0.6.21
+pytz-deprecation-shim==0.1.0.post0
 rich==12.6.0
-selenium==3.141.0
 six==1.12.0
 sortedcontainers==2.4.0
-soupsieve==2.2.1
-textract==1.6.3
-tika==1.24
-tqdm==4.64.1
-typing-extensions==4.4.0
-tzlocal==1.5.1
-urllib3==1.26.4
-Wand==0.6.10
-wordcloud==1.8.1
+soupsieve==2.3.2.post1
+SpeechRecognition==3.8.1
+textract==1.6.5
+tzdata==2022.6
+tzlocal==4.2
 xlrd==1.2.0
-XlsxWriter==1.4.3
+XlsxWriter==3.0.3
